added gallery menu

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
 	<!-- build:js js/main.min.js -->
 	<script type="text/javascript" src="js/load.js"></script>
+	<script type="text/javascript" src="js/gallery.js"></script>
 	<script type="text/javascript" src="js/puzzle.js"></script>
 	<script type="text/javascript" src="js/puzzle_piece.js"></script>
 	<script type="text/javascript" src="js/menu.js"></script>
